--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         ],
         "uuid": "026b7cc9-a77c-452a-8537-8561d994508e",
         "watchapp": {
-            "watchface": false
+            "watchface": true
         }
     },
     "version": "0.1.0"
